src/objects/Learning__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This article type contains the learning guides for the support site.</description>
    <fields>
        <fullName>Article__c</fullName>
        <label>Article</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Back_Button_URL__c</fullName>
        <description>This is the URL for the previous chapter in the current learning guide</description>
        <inlineHelpText>Enter the URL for the previous chapter in this learning guide</inlineHelpText>
        <label>Back Button URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Chapter_List__c</fullName>
        <description>This field should contain an ordered list with a link to each chapter in the guide. Active class should be on the current chapter</description>
        <inlineHelpText>Ordered list of chapters with titles, links, and active class set on current chapter</inlineHelpText>
        <label>Chapter List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <defaultValue>&quot;Chapter &quot;</defaultValue>
        <description>This field should contain the word &apos;Chapter&apos; followed by the chapter number.</description>
        <inlineHelpText>e.g. Chapter 1, Chapter 2, or Chapter 5</inlineHelpText>
        <label>Chapter</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nav_Title__c</fullName>
        <description>This field should contain the title used in the left navigation to be set as active</description>
        <inlineHelpText>Enter the navigation title from the left menu that should be active</inlineHelpText>
        <label>Nav Title</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Button_Text__c</fullName>
        <description>The title of the next chapter(article) in the guide</description>
        <inlineHelpText>Enter the title of the next chapter in this guide</inlineHelpText>
        <label>Next Button Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Button_URL__c</fullName>
        <description>The URL for the next chapter(article) in this learning guide</description>
        <inlineHelpText>Enter the URL for the next chapter in this learning guide</inlineHelpText>
        <label>Next Button URL</label>
        <type>Url</type>
    </fields>
    <label>Learning</label>
    <pluralLabel>Learning</pluralLabel>
</CustomObject>